docs: Enhance and expand content with detailed explanations and best practices across multiple Java and JavaScript learning modules.